# jupyter-cadquery

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-0.35  Icon Factory.ipynb  Juypter CadQuery Logo.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  Renderer.ipynb  ShaderMaterial.ipynb  Wire bug.ipynb  apt.txt  environment-jl-0.35.yml  environment-jl-1.0.yml  environment.yml  environment.yml.bak  jcv  jcv.cmd  jupyter_cadquery.json  labextensions-2.0dev1.txt  labextensions.txt  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py  validate_nb.py
binder/: cadquery.ipynb  environment.yml  labextensions.txt  postBuild
doc/: clipping.md  cqparts.md  faces-edges-vertices.md  features.md  occ.md  replay.md
docker/: Dockerfile  environment.yml  run.sh
docker/examples/: 1-cadquery.ipynb  2-cadquery-examples.ipynb
docker/examples/assemblies/: 1-disk-arm.ipynb  3-jansen-linkage.ipynb
docker/examples/ide/: 4-bearing.py  6-nested-assemblies.py
docker/examples/others/: cqparts.ipynb  widgets-test.ipynb
examples/: 1-cadquery.ipynb  2-cadquery-examples.ipynb  3-occ.ipynb  4-sketches.ipynb  5-build123d.ipynb  5-multiprocessing.ipynb  6-show_object.ipynb  7-show.ipynb  8-show_all.ipynb  9-set_viewer_config.ipynb  CQ examples.ipynb  CQParts-Example.ipynb  CadQuery-Example.ipynb  CadQuery.ipynb  Hexapod.ipynb  OCC examples.ipynb  Untitled.ipynb  asm4_tutrial2.ipynb  cadquery-assemblies.ipynb  cadquery-examples.ipynb  cadquery.ipynb  cqparts.ipynb  headset cable holder.ipynb  install-cadquery-contrib.ipynb  occ.ipynb  widgets.ipynb
examples/4- assemblies/: 1-cq-assemblies.ipynb  2-asm4_tutorial2.ipynb  3-hexapod.ipynb
examples/4-assemblies/: 1-asm4_tutorial2.ipynb  3-jansen-linkage.ipynb  4-cq-assemblies.ipynb
examples/assemblies/: ._export.html  1-asm4_tutorial2.ipynb  1-disk-arm.ipynb  2-hexapod.ipynb  3-jansen-linkage.ipynb  4-bearing.ipynb  5-door.ipynb  6-nested-assemblies.ipynb
examples/ide/: 1-disk_arm.py  2-hexapod.py  3-jansen-linkage.py  4-bearing.py  5-door.py  6-nested-assemblies.py
examples/others/: cqparts.ipynb  install-cadquery-contrib.ipynb  widgets-test.ipynb
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: embed.js  extension.js  image_button.js  index.js  labplugin.js  tree_view.js
js/style/: index.css
jupyter-cadquery-widgets/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package.json  setup.py  tsconfig.json
jupyter-cadquery-widgets/.github/workflows/: build.yml
jupyter-cadquery-widgets/src/: image_button.js  index.ts  tree_view.js  widgets.ts
jupyter-cadquery-widgets/style/: base.css
jupyter-config/jupyter_server_config.d/: jupyter_cadquery.json
jupyter_cadquery/: __init__.py  _version.py  animation.py  app.py  base.py  cad_animation.py  cad_display.py  cad_helpers.py  cad_objects.py  cad_renderer.py  cad_view.py  comms.py  config.py  defaults.py  display.py  export.py  image_button.py  logo.py  mp_tess.py  mp_tessellator.py  ocp_utils.py  progress.py  replay.py  serialize.py  show.py  stepreader.py  style.py  tessellator.py  tools.py  tree_view.py  utils.py  view.py
jupyter_cadquery/cadquery/: __init__.py  cad_objects.py  cqparts.py  export.py  replay.py
jupyter_cadquery/mate_assembly/: __init__.py  massembly.py  mate.py  view.py
jupyter_cadquery/occ/: __init__.py  cad_objects.py
jupyter_cadquery/static/: extension.js  index.js  index.js.map
jupyter_cadquery/viewer/: __init__.py  client.py  server.py  viewer.ipynb
jupyter_cadquery/widgets/: __init__.py  image_button.py  tree_view.py
notebooks/: Icon Factory.ipynb  Juypter CadQuery Logo.ipynb
tests/: testlib.py
